--- a/Box model/01-Box-model/style.css
+++ b/Box model/01-Box-model/style.css
@@ -2,4 +2,22 @@
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
 
+h1 {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border: 3px dotted salmon;
+    text-align: center;
+    width: 30%;
+    margin: 50px auto;
+}
 
+img {
+    border: 3px solid salmon;
+    border-radius: 15%;
+    width: 30%;
+    padding: 30px;
+    margin: 10px;
+}
+
+.odstavec {
+    display: inline-block;
+}
