--- a/Display/03-inline-block-menu/style.css
+++ b/Display/03-inline-block-menu/style.css
@@ -25,3 +25,24 @@ h1, h2, h3 {
  tmavsi     #95a5a6
  tmava      #34495e
 */
+.menu li {
+    display: inline-block;
+}
+
+.menu{
+    padding: 0;
+    text-align: center;
+    background-color: red;
+}
+
+.menu a {
+    text-decoration: none;
+    color: red;
+    font-size: large;
+    background-color: yellow;
+    padding: 50px;
+}
+
+.menu a:hover {
+    background-color: deeppink;
+}
